--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Header-start -->
     <header>
         <div class="header-image">
-            <img src="/Media/background.png">
+            <img src="Media/background.png">
         </div>
         <div class="nav">
             <div>
@@ -32,7 +32,7 @@
         </div>
 
         <div class="head">
-            <img class="logo" src="/Media/logo.png">
+            <img class="logo" src="Media/logo.png">
             <h3>Discover the best food & drinks in Kochi</h3>
             <div class="search">
                 <i class="fas fa-map-marker-alt"></i>
@@ -57,14 +57,14 @@
                     <p>Order Online</p>
                     <p>Stay home and order to your door step</p>
                 </div>
-                <img src="/Media/Order Online.webp">
+                <img src="Media/Order Online.webp">
             </div>
             <div class="box">
                 <div class="white">
                     <p>Dining</p>
                     <p>view the city's favourite dining venue</p>
                 </div>
-                <img src="/Media/Dining.jpeg">
+                <img src="Media/Dining.jpeg">
            
             </div>
             
@@ -85,22 +85,22 @@
             <div class="box-1">
                 <div><span>8 Places for Art Lovers<br> <span>8 Places <i class="fas fa-caret-right"></i></span> </span>
                 </div>
-                <img src="/Media/Art lovers.png">
+                <img src="Media/Art lovers.png">
             </div>
             <div class="box-1">
                 <div><span>14 Great Cafes <br> <span>15 Places &nbsp; <i class="fas fa-caret-right"></i></span> </span>
                 </div>
-                <img src="/Media/Authentic Kuzhimandhi.jpg">
+                <img src="Media/Authentic Kuzhimandhi.jpg">
             </div>
             <div class="box-1">
                 <div><span>6 Places for Authentic Kuzhimandhi <br> <span>5 Places &nbsp; <i class="fas fa-caret-right"></i></span> </span>
                 </div>
-                <img src="/Media/Great Cafe.jpg">
+                <img src="Media/Great Cafe.jpg">
             </div>
             <div class="box-1">
                 <div><span>7 Best Luxury Dining Places<br> <span>5 Places &nbsp; <i class="fas fa-caret-right"></i></span> </span>
                 </div>
-                <img src="/Media/Luxuary Dining.jpg">
+                <img src="Media/Luxuary Dining.jpg">
             </div>
         </div>
 
