update on contact form

--- a/index.html
+++ b/index.html
@@ -144,8 +144,9 @@
         <div class="flex contact">
 
             <!-- form image -->
-            <img src="https://b.zmtcdn.com/data/pro/5722d9e687511d79616bcab92470734e1596187147.png">
-
+            <div class="flex_contactImage">
+            <img src="https://b.zmtcdn.com/data/o2_assets/f773629053b24263e69f601925790f301680693809.png">
+            </div>
             <!-- form details -->
             <div class="address">
                 <h2>Get the Zomato App</h2>
